--- a/src/app/profile/contact/contact.component.html
+++ b/src/app/profile/contact/contact.component.html
@@ -61,6 +61,30 @@
               </div>
             </div>
           </div>
+
+          <div class="col-md-3 p-3" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+            <div class="card bg-primary uk-border-circle">
+              <div class="card-body">
+                <h5 class="card-title text-white mt-1">Internal Smart India Hackathon</h5>
+                <h6 class="card-title text-lowercase text-white pull-right">-by AICTE</h6>
+                <a href="https://drive.google.com/file/d/1Yenll0eUaPEx_5tyWlhXmFzMW0HXNFm2/view?usp=sharing"
+                  class="btn btn-warning text-primary ml-5 mt-5">View</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-3 mt-3" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+            <div class="card bg-warning uk-border-circle">
+              <div class="card-body">
+                <h6 class="card-title text-white">Smart India Hackathon Finalist</h6>
+                <h6 class="card-title text-lowercase pull-right">-by AICTE</h6>
+                <a href="https://drive.google.com/file/d/1iJAFj1FDkkZKzjQmqHc8R5tDU1BtJsLi/view?usp=sharing"
+                  class="btn btn-outline-secondary ml-5 mt-5">View</a>
+              </div>
+            </div>
+          </div>
+
+
           <!-- <div class="col-md-3">
             <div class="card">
               <img class="card-img-top" src="assets/images/Bot.jpg" alt="Card image" style="width:100%">
