--- a/src/app/profile/projects/projects.component.html
+++ b/src/app/profile/projects/projects.component.html
@@ -12,11 +12,7 @@
         <div class="card-body">
           <h4 class="card-title">Sentiment Analysis for code-mixed Languages(Smart India Hackathon 2020)</h4>
           <h5 class="card-text"><b>Technology :</b> HTML, CSS, Python,Django, Tensorflow, Keras</h5>
-            <h5 class="card-text"><a href="http://my-personal-portfolio.epizy.com/?i=2">View my Live Demo</a></h5>
-
-          <a href="https://medium.com/@mehulkothari05/personal-portfolio-using-django-dba49c355905" class="btn btn-primary stretched-link ml-2 mr-5">See Project</a>
-          <a href="https://github.com/mehulk05/My-Personal-Portfolio" class="btn btn-primary stretched-link">GithubLink</a>
-
+          <a href="https://drive.google.com/file/d/1X83GFBu_wA4whvaAmR-EtBL8eKFpGX9d/view?usp=sharing" class="btn btn-primary stretched-link ml-2 mr-5">Demo Video</a>
         </div>
       </div>
     </div>
@@ -28,9 +24,10 @@
         <img class="card-img-top"src="assets/images/Ercess-Live.png" alt="Card image" style="width:100%">
         <div class="card-body">
           <h4 class="card-title">Ercess-live Website</h4>
+          <h4 class="card-title">Web Development Internship</h4>
            <h5 class="card-text"><b>Technology :</b> Angular js, Django, Bootstrap Material, Bitbucket </h5>
-
-            <h5 class="card-text"><a href="http://msgc320.pythonanywhere.com/">View my Live Demo</a></h5>
+          <a href="http://www.ercess.com/"
+            class="btn btn-primary stretched-link ml-2 mr-5">Visit Website</a>
         </div>
     </div>
     </div>
@@ -42,9 +39,8 @@
         <img class="card-img-top" src="assets/images/Institute.jpg" alt="Card image" style="width:100%">
         <div class="card-body">
           <h4 class="card-title">Institution Management Portal</h4>
-          <h5 class="card-text"><b>Technology :</b> Angular 8, NodeJS, Bootstrap, MongoDB Atlas </h5>
-            <h5 class="card-text"><a href="http://www.brahmanvarvadhusuchak.com/">View my Live Demo</a></h5>
-          <a href="https://github.com/mehulk05/Matrimonial-Website" class="btn btn-primary stretched-link">GithubLink</a>
+          <h5 class="card-text"><b>Technology :</b> Angular 8, NodeJS, Bootstrap, MongoDB Atlas</h5>
+
         </div>
       </div>
     </div>
@@ -54,11 +50,13 @@
       <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
        <div class="card" >
-        <img class="card-img-top" src="assets/images/Bot.jpg" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/Bot.jpg" alt="Card image" style="width:600px; height:250px">
         <div class="card-body">
          <h4 class="card-title">Autonomous Bot</h4>
+        <h5 class="card-title">RoboClub Workshop</h5>
            <h5 class="card-text"><b>Technology :</b> C++, Arduino</h5>
-          <a href="https://github.com/mehulk05?tab=repositories" class="btn btn-primary stretched-link">GithubLink</a>
+          <a href="https://github.com/tejashreeSalvi/Arduino-code/tree/master/IRSensorMecanum"
+            class="btn btn-primary stretched-link ml-2 mr-5">Github Link</a>
         </div>
     </div>
     </div>
@@ -68,11 +66,11 @@
     <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
        <div class="card" >
-        <img class="card-img-top" src="assets/images/s1.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/s1.png" alt="Card image" style="width:300px">
         <div class="card-body">
           <h4 class="card-title">Stegonography App</h4>
            <h5 class="card-text"><b>Technology :</b>Java, Android</h5>
-          <a href="https://github.com/mehulk05/Smart-Baby-Stroller-System.git" class="btn btn-primary stretched-link">GithubLink</a>
+          <a href="https://github.com/tejashreeSalvi/SteganographyAPP" class="btn btn-primary stretched-link">GithubLink</a>
         </div>
         </div>
         </div>
@@ -81,11 +79,11 @@
       <div class="col-md-4 col-sm-6 animate-box" data-animate-effect="fadeInLeft">
         <div class="blog-entry">
            <div class="card" >
-        <img class="card-img-top" src="assets/images/p6.png" alt="Card image" style="width:100%">
+        <img class="card-img-top" src="assets/images/p6.png" alt="Card image" style="width:350px">
         <div class="card-body">
          <h4 class="card-title">Voice controlled Messaging App</h4>
            <h5 class="card-text"><b>Technology :</b> Android, Java</h5>
-          <a href="https://github.com/mehulk05?tab=repositories" class="btn btn-primary stretched-link">GithubLink</a>
+          <a href="https://github.com/tejashreeSalvi/Voice-Controlled-MessagingAPP" class="btn btn-primary stretched-link">GithubLink</a>
         </div>
         </div>
         </div>
