--- a/src/app/profile/footer/footer.component.html
+++ b/src/app/profile/footer/footer.component.html
@@ -1,9 +1,9 @@
 <footer class="footer">
     <div class="container text-center">
-      <a class="cc-facebook btn btn-link" href="https://www.facebook.com/mehul.kothari.39" target="_blank">
+      <a class="cc-facebook btn btn-link" href="" target="_blank">
         <i class="fa fa-facebook fa-2x " aria-hidden="true"></i>
       </a>
-      <a class="cc-github btn btn-link " href="https://github.com/mehulk05" target="_blank">
+      <a class="cc-github btn btn-link " href="https://github.com/tejashreeSalvi" target="_blank">
         <i class="fa fa-github fa-2x " aria-hidden="true"></i>
       </a>
       <!-- <a class="cc-google-plus btn btn-link" href="#" target="_blank">
